v0.5.9.3: API refactor completed (paged endpoints, filters, frontend sync, tests fixed)